--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "smartbrain",
   "version": "0.1.0",
   "engines": {
-    "node": "18.x"
+    "node": "16.x",
+    "npm": "8.x"
   }
   "private": true,
   "dependencies": {
